syntax = "proto3";

option go_package = "github.com/ricxi/flat-list/mailer/activate";

package activate;

message Request {
    string from  = 1;
    string to = 2;
    string firstName = 3;
    string activationToken = 4;
}

message Response {
    string status = 1;
}

service mailerService {
    rpc SendEmail(Request) returns (Response);
}

